--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ main{
 
     margin: 15px;
     text-align: center;
-    
+
 }
 
 h1{
@@ -32,6 +32,6 @@ p{
 
 img{
     border-radius: 15px;
+    width: 100%;
+    margin: auto;
 }
-
-
